# satpos-predictor

./: CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt
app/src/: AlmanachModel.cpp  AlmanachModel.h  ApplicationSettings.cpp  ApplicationSettings.h  CoordinateWidget.cpp  CoordinateWidget.h  CoordinateWidget.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  PredictionModel.cpp  PredictionModel.h  main.cpp
lib/: CMakeLists.txt
lib/cmake/: FindExternalProjectGTest.cmake  GTestMacros.cmake
lib/src/prediction/: CMakeLists.txt  converters.c  converters.h  ephemerides.c  ephemerides.h  geometric.c  geometric.h
lib/src/prediction-qt/: AglStream.cpp  AglStream.h  Almanach.cpp  Almanach.h  CMakeLists.txt  CartesianCoordinate.cpp  CartesianCoordinate.h  GeodeticCoordinate.cpp  GeodeticCoordinate.h  Point3.cpp  Point3.h  PrecisionDateTime.cpp  PrecisionDateTime.h  Prediction.cpp  Prediction.h  Predictor.cpp  Predictor.h  SphericalCoordinate.cpp  SphericalCoordinate.h
lib/src/test/: CMakeLists.txt  Utils.h
lib/tests/: CMakeLists.txt
lib/tests/Prediction/: CMakeLists.txt  ConverterTest.cpp  EphemeridesTest.cpp  GeometricTest.cpp
lib/tests/prediction-qt/: AglStreamTest.cpp  AlmanachsTest.cpp  CMakeLists.txt  CoordinateTest.cpp  Point3Test.cpp  PrecisionDateTimeTest.cpp  PredictorTest.cpp
lib/tests/prediction-qt/samples/: MCCJ_170102.agl
