CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/app/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/lib/src)

OPTION(TESTS_ENABLE "Enable unit tests" OFF)

MESSAGE("CMAKE_BUILD_TYPE:" ${CMAKE_BUILD_TYPE})
MESSAGE("TESTS_ENABLE:"${TESTS_ENABLE})

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/lib/cmake)

IF(TESTS_ENABLE)
    ENABLE_TESTING()
    FIND_PACKAGE(ExternalProjectGTest)
ENDIF()

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)
