CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

IF(POLICY CMP0043)
    CMAKE_POLICY(SET CMP0043 OLD)
ENDIF()

PROJECT(lib)

SET(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -fPIC")

OPTION(TESTS_ENABLE "Enable unit tests" OFF)

INCLUDE(cmake/GTestMacros.cmake)

IF(TESTS_ENABLE)
    ENABLE_TESTING()
    FIND_PACKAGE(GTest REQUIRED)
    INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
    ADD_SUBDIRECTORY(tests)
ENDIF()

INCLUDE_DIRECTORIES(src)

ADD_SUBDIRECTORY(src/prediction)
ADD_SUBDIRECTORY(src/prediction-qt)
ADD_SUBDIRECTORY(src/test)
