CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

IF(POLICY CMP0043)
    CMAKE_POLICY(SET CMP0043 OLD)
ENDIF()

PROJECT(lib)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -pedantic -fPIC")

IF(TESTS_ENABLE)
    INCLUDE(cmake/GTestMacros.cmake)
    INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS})
    ADD_SUBDIRECTORY(tests)
ENDIF()

ADD_SUBDIRECTORY(src/prediction)
ADD_SUBDIRECTORY(src/prediction-qt)
ADD_SUBDIRECTORY(src/test)
